<resources>
    <!-- Dummy Data -->
    <string name="app_name">FoodTracker</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="orange">Orange</string>
    <string name="milk">Milk</string>
    <string name="eggs">Eggs</string>
    <string name="chicken">Chicken</string>

    <!-- For Menu -->
    <string name="menu_option_add">Add</string>

    <!-- For Main Activity -->
    <string name="floating_action_button_content_description">Add a new food item</string>

    <!-- For Add Fragment -->
    <string name="tv_food_category">Category <font color='#FF0000'>*</font></string>
    <string name="tv_food_name">Food Name <font color='#FF0000'>*</font></string>
    <string name="text_input_food_name_hint">Please enter the food name</string>
    <string name="tv_food_quantity">Quantity <font color='#FF0000'>*</font></string>
    <string name="text_input_food_quantity_hint">Please enter the food quantity</string>
    <string name="tv_expiration_date">Expiration Date <font color='#FF0000'>*</font></string>
    <string name="button_add">Add</string>
    <string name="button_update">Update</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>

    <!-- For List Fragment -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="expiration_in_x_days">In %1$s days</string>
    <string name="header_item_name">Item</string>
    <string name="header_expiration_date">Expire</string>
    <string name="header_item_quantity">Quantity</string>

</resources>