<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="foodItemViewModel"
            type="com.example.foodtracker.viewmodels.FoodItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin">

        <TextView
            android:id="@+id/item_name"
            style="@style/Header"
            android:layout_marginStart="@dimen/margin"
            android:maxLines="1"
            android:text="@string/header_item_name"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/item_expiration"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_expiration"
            style="@style/Header"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:maxLines="1"
            android:text="@string/header_expiration_date"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/item_quantity"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/item_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_quantity"
            style="@style/Header"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin"
            android:maxLines="1"
            android:text="@string/header_item_quantity"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/item_expiration"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_expiration" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:listitem="@layout/list_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:contentDescription="@string/floating_action_button_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>